<resources>
    <string name="app_name">Smart Energy</string>

    <!--******************************   String login e cadastro   ******************************-->
    <string name="textLogTitulo">LOGIN</string>
    <string name="hintLogCPF">CPF</string>
    <string name="hintLogSenha">Digite a senha</string>
    <string name="btnLog">LOGIN</string>
    <string name="textLogEsqueceuSenha">ESQUECEU A SENHA?</string>
    <string name="textLogNaoTemConta">Não tem conta? </string>
    <string name="textLogRegistreAgora"><u>Registre-se agora</u></string>

    <string name="hintCadNome">Nome</string>
    <string name="hintCadSobrenome">Sobrenome</string>
    <string name="hintCadConfirmarSenha">Confirme a senha</string>
    <string name="hintCadCpf">CPF</string>
    <string name="hintCadEmail">Email</string>
    <string name="hintCadTel">Telefone</string>
    <string name="textCadTitulo">CADASTRO</string>
    <string name="btnCad">CADASTRAR</string>

    <string name="tituloLogin">LOGIN</string>
    <string name="plainEmail">E-mail</string>
    <string name="editTextNome">Nome</string>
    <string name="plainSenha">Digite a senha</string>
    <string name="plainConfirmeSenha">Confirme a senha</string>
    <string name="plainCPF">CPF</string>
    <string name="button">LOGIN</string>
    <string name="TextViewEsqueceuSenha">ESQUECEU A SENHA?</string>
    <string name="TextViewRodape">Não tem conta? </string>
    <string name="TextViewRodape2"><u>Registre-se agora</u></string>

    <string name="textoDescricao">Por favor, preencha os campos abaixo com suas informações pessoais para criar uma conta em nosso sistema.</string>
    <string name="tituloCadastro">CADASTRO</string>
    <string name="btnCadastro">CADASTRAR</string>

    <!--************************************* String Sucesso ************************************-->
    <string name="txtSucesso"> Seu cadastro foi efetuado com sucesso!
        Aguarde até que um de nossos vendedores entre em contato com você.

        Enquanto isso, você poderá usar uma versão de avaliação do aplicativo para conhecer seus recursos.</string>

    <!--*********************** String esqueci a senha e criar nova senha ***********************-->
    <string name="txtNvSenhaTitulo">Criar nova senha</string>
    <string name="txtNvSenhaDsc">Sua senha não pode ser nenhuma utilizada anteriormente</string>
    <string name="editTextNvSenha">Nova Senha</string>
    <string name="editTextCfmSenha">Confirme a Senha</string>
    <string name="btnCfmSenha">Redefinir Senha</string>

    <string name="textDescricao_codVerificacao">Digite o código que enviamos no seu email</string>
    <string name="textTitulo_codVerificacao">Código de Verificação</string>
    <string name="codVerificacao_botao">Verificar</string>
    <string name="codVerificacao_textRodape">Não recebeu o código?</string>
    <string name="codVerificacao_textRodape2">Reenviar</string>
    <string name="plainEsqSenhaTitulo">Esqueceu a senha?</string>
    <string name="plainEsqSenhaDescricao">Não se preocupe! Por favor, insira abaixo o endereço de email vinculado a sua conta</string>
    <string name="plainEsqSenhaEmail">Entre com seu email</string>
    <string name="btnEsqSenha">Enviar Código</string>
    <string name="txtEscSenha">Lembrou a Senha?</string>
    <string name="txtEscSenhaLog"><u>Login</u></string>
    <string name="TextContaAtual">Conta Atual</string>

    <string name="TextSenhaAlterada">Senha alterada!</string>
    <string name="TextSenhaAlteradaDsc">Sua senha foi alterada com sucesso.</string>
    <string name="btnSenhaAlt">Volte ao Login</string>


    <!--**********************************   String inicio   **********************************-->

    <string name="txtData">Quinta, 16 de MAR de 2023</string>
    <string-array name="spinnerEndereco">
        <item>Rua das Rosas</item>
        <item>Rua das Orquideas</item>
        <item>Rua dos Cravos</item>
    </string-array>
    <string name="textConsumoDoDiaDeHoje">Consumo de energia no dia de hoje:</string>
    <string name="txtMedidorConsumoDiario">78kWh</string>
    <string name="textAjusteLimite"><u>Ajuste seu limite</u></string>
    <string name="plainAjusteNum">R$ </string>
    <string name="txtDicasConsumo">DICAS PARA CONSUMO</string>
    <string name="btnConfira">CONFIRA</string>


    <!-- *******************************   String Dicas *****************************************-->
    <string name="txtDica1"><u>1.</u> TROQUE LÂMPADAS INCANDESCENTES POR LÂMPADAS LED:\n As lâmpadas LED consomem muito menos energia do que as lâmpadas incandescentes e duram muito mais. Além disso, elas produzem menos calor, o que pode ajudar a reduzir a necessidade de ar condicionado.</string>
    <string name="txtDica2"><u>2.</u> DESLIGUE OS APARELHOS ELETRÔNICOS DA TOMADA:\n Muitos aparelhos eletrônicos continuam consumindo energia mesmo quando estão desligados. Para evitar esse "consumo fantasma", desligue os aparelhos da tomada quando não estiverem em uso ou utilize uma régua de tomadas com botão liga/desliga.</string>
    <string name="txtDica3"><u>3.</u> UTILIZE A LUZ NATURAL:\n Durante o dia, tente aproveitar a luz natural ao máximo. Abra as cortinas e persianas para deixar a luz entrar na casa e reduza a necessidade de iluminação artificial. Além disso, escolha cores claras para paredes e móveis, que ajudam a refletir a luz e a tornar os ambientes mais iluminados.</string>


    <!-- *******************************  String Perfil *****************************************-->
    <string name="plainTelefonePerfil"> TELEFONE</string>
    <string name="plainEmailPerfil"> E-MAIL</string>

    <string-array name="spinnerCasas">
        <item>Endereço 1</item>
        <item>Endereço 2</item>
        <item>Endereço 3</item>
    </string-array>
    <string name="plainCEPPerfil">CEP</string>
    <string name="plainCidadePerfil">Cidade</string>
    <string name="plainEstadoPerfil">Estado</string>
    <string name="plainBairroPerfil">Bairro</string>
    <string name="plainNumPerfil">Nº </string>
    <string name="plainLogradouroPerfil">Logradouro</string>
    <string name="disconnect">DESCONECTAR</string>

    <!-- *******************************  String Perfil - BACK END *****************************************-->
    <string name="perfil_numero">Nº %s</string>

    <!-- *******************************  String Cadastro ***************************************-->
    <string name="lerTermos"><u>Leia os termos de uso</u></string>
    <string name="termosDeUso">Este Termo de Uso e Privacidade estabelece as diretrizes para o uso dos serviços fornecidos por este aplicativo de acordo com a Lei Geral de Proteção de Dados ("LGPD") e demais legislações aplicáveis à proteção de dados pessoais.\n\n
Consentimento\n
Ao utilizar nosso Serviço, você concorda e aceita este Termo, autorizando expressamente a coleta, o uso, o armazenamento e o compartilhamento dos seus dados pessoais conforme descrito neste documento. Caso não concorde com este Termo, por favor, não utilize nosso Serviço.\n\n
Coleta de Dados Pessoais\n
2.1. Coletamos os dados pessoais fornecidos por você de forma voluntária, como nome, endereço de e-mail, número de telefone, dados de pagamento e outras informações necessárias para a prestação do Serviço.\n
2.2. Podemos coletar dados de forma automática, como endereço IP, tipo de dispositivo, navegador utilizado, localização geográfica aproximada e informações de acesso, para fins estatísticos e de segurança.\n\n
Uso dos Dados Pessoais\n
3.1. Utilizamos seus dados pessoais para fornecer, operar, melhorar e personalizar o Serviço, bem como para responder a suas solicitações e oferecer suporte ao usuário.\n
3.2. Seu endereço de e-mail poderá ser utilizado para o envio de informações, atualizações, promoções ou comunicações relacionadas ao Serviço. Caso não deseje receber tais comunicações, você poderá optar por cancelar a inscrição a qualquer momento.\n
3.3. Poderemos utilizar dados de forma agregada e anonimizada para análises internas, desenvolvimento de produtos e serviços, e para melhorar a experiência do usuário.\n\n
Compartilhamento de Dados Pessoais\n
4.1. Não compartilhamos seus dados pessoais com terceiros, exceto quando necessário para a prestação do Serviço, cumprimento de obrigações legais, proteção dos nossos direitos ou se você tiver dado seu consentimento prévio.\n
4.2. Podemos contratar prestadores de serviços terceirizados, como processadores de pagamentos ou provedores de serviços de hospedagem, que terão acesso aos seus dados pessoais apenas para executar tarefas específicas em nosso nome, e serão obrigados a proteger esses dados de acordo com as mesmas diretrizes deste Termo.\n\n
Armazenamento e Segurança dos Dados\n
5.1. Seus dados pessoais serão armazenados em servidores seguros e protegidos por medidas técnicas e organizacionais adequadas.\n
5.2. Envidamos esforços razoáveis para proteger seus dados pessoais contra perda, uso indevido, acesso não autorizado, divulgação, alteração ou destruição. No entanto, não podemos garantir a segurança absoluta dos dados transmitidos pela Internet.\n\n
Direitos do Titular dos Dados\n
6.1. Você tem o direito de acessar, corrigir, atualizar e excluir seus dados pessoais, bem como de obter informações sobre o tratamento desses dados.\n
6.2. Caso deseje exercer seus direitos ou tenha dúvidas\n\n
Declaro conhecer e concordar com as disposições do Regimento do SMART ENERGY, Termos de Uso e Política de Privacidade, Política de Segurança da Informação e Privacidade e Política de Propriedade Intelectual.</string>


</resources>
