<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brancoazulado"
    tools:context=".Tela_Redefinir_Senha">

    <TextView
        android:id="@+id/txtNvSenhaTitulo"
        android:layout_width="313dp"
        android:layout_height="47dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/txtNvSenhaTitulo"
        android:textColor="@color/lazul_marinho"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtNvSenhaDsc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <TextView
        android:id="@+id/txtNvSenhaDsc"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/montserrat_bold"

        android:text="@string/txtNvSenhaDsc"
        android:textColor="@color/lazul_marinho"
        app:layout_constraintBottom_toTopOf="@+id/editTextNvSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNvSenha"
        android:layout_width="314dp"
        android:layout_height="49dp"
        android:background="@drawable/borda_redonda_edit_text"
        android:ems="10"
        android:hint="@string/editTextNvSenha"
        android:inputType="textPersonName"
        android:textColor="@color/lazul_marinho"
        android:textColorHint="@color/lazul_marinho"
        app:layout_constraintBottom_toTopOf="@+id/editTextCfmSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <EditText
        android:id="@+id/editTextCfmSenha"
        android:layout_width="314dp"
        android:layout_height="49dp"
        android:layout_marginBottom="304dp"
        android:background="@drawable/borda_redonda_edit_text"
        android:ems="10"
        android:hint="@string/editTextCfmSenha"
        android:inputType="textPersonName"
        android:textColor="@color/lazul_marinho"
        android:textColorHint="@color/lazul_marinho"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCfmSenha"
        android:layout_width="312dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/lazul_marinho"
        android:text="@string/btnCfmSenha"
        android:textColor="@color/lbranco"
        app:cornerRadius="47dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCfmSenha"
        app:layout_constraintVertical_bias="0.152" />

    <ImageButton
        android:id="@+id/btnVoltaNovaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icone_seta"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>