<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulescuro"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:text="@string/tituloLogin"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textLogin2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/textLogin2"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="119dp"
        android:layout_marginBottom="557dp"
        android:fontFamily="@font/mplusrrounded1c_bold"

        android:text="@string/textoLogin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textLogin"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="176dp"

            android:background="@drawable/bordas_arredondadas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="290dp"
            android:layout_height="46dp"
            android:layout_marginTop="68dp"
            android:backgroundTint="@color/azulescuro"
            android:ems="10"
            android:fontFamily="@font/mplusrrounded1c_bold"
            android:hint="@string/plainEmail"
            android:inputType="textPersonName"
            android:textColorHighlight="@color/azulescuro"
            android:textColorHint="@color/azulescuro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintVertical_bias="0.118" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="290dp"
            android:layout_height="46dp"
            android:backgroundTint="@color/azulescuro"
            android:ems="10"
            android:fontFamily="@font/mplusrrounded1c_bold"
            android:hint="@string/plainSenha"
            android:inputType="textPersonName"
            android:textColorHighlight="@color/azulescuro"
            android:textColorHint="@color/azulescuro"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            app:layout_constraintVertical_bias="0.431" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextSenha"
            app:layout_constraintTop_toTopOf="@+id/editTextSenha"
            app:srcCompat="@drawable/olhoicone" />

        <Button
            android:id="@+id/button"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/azulescuro"
            android:text="@string/button"
            app:cornerRadius="47dp"
            app:layout_constraintBottom_toTopOf="@+id/textEsqueceuSenha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textEsqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewEsqueceuSenha"
            android:textColor="@color/azulescuro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            app:layout_constraintVertical_bias="0.568" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="104dp"
            android:text="@string/TextViewRodape"
            android:textColor="@color/azulescuro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/textEsqueceuSenha"
            app:layout_constraintVertical_bias="0.54" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/TextViewRodape2"
            android:textColor="@color/brancoazuladoTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEsqueceuSenha"
            app:layout_constraintVertical_bias="0.881" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/email_azul"
            tools:layout_editor_absoluteX="315dp"
            tools:layout_editor_absoluteY="309dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>