<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brancoazulado"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textSenhaAltTitulo"
            android:layout_width="295dp"
            android:layout_height="64dp"
            android:layout_marginStart="58dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="58dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/TextSenhaAlterada"
            android:textColor="@color/lazul_marinho"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textSenhaAltDescricao"
            android:layout_width="281dp"
            android:layout_height="33dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="16dp"

            android:layout_marginEnd="65dp"

            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_horizontal"
            android:text="@string/TextSenhaAlteradaDsc"
            android:textColor="@color/lazul_marinho"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSenhaAltTitulo" />

        <ImageView
            android:id="@+id/imgCadSeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icone_seta" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="207dp"
            android:layout_marginEnd="156dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icone_senha_alterada" />

        <Button
            android:id="@+id/btnSenhaAlt"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="215dp"
            android:backgroundTint="@color/lazul_marinho"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/btnSenhaAlt"
            android:textColor="@color/lbranco"
            app:cornerRadius="47dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>